--- a/pom.xml
+++ b/pom.xml
@@ -72,10 +72,10 @@
 			<scope>provided</scope>
 		</dependency>
 		<!-- Spring Security -->
-				<dependency>
-					<groupId>org.springframework.boot</groupId>
-					<artifactId>spring-boot-starter-security</artifactId>
-				</dependency>
+<!--				<dependency>-->
+<!--					<groupId>org.springframework.boot</groupId>-->
+<!--					<artifactId>spring-boot-starter-security</artifactId>-->
+<!--				</dependency>-->
 
 		<!-- Swagger (SpringDoc OpenAPI 3) -->
 		<dependency>
